--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,10 +1,10 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
+  name        : "Xiaojing Xia"
   uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
+  email       : "xiaojingxia0826@gmail.com"
+  bio         : "Xiaojing's Bio"
   avatar      : "bio-photo-2.jpg"
   twitter     : "name"
   google_plus : "Name"
