--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Xiaojing Xia"
-  avatar           : "profile.png"
+  avatar           : "profile.jpeg"
   bio              : "Postdoctoral researcher at Lawrence Berkeley National Laboratory"
   location         : "Berkeley, CA"
   employer         :
