--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Xiaojing Xia"
   avatar           : "profile.png"
-  bio              : "SLAC National Accelerator Laboratory"
-  location         : "Menlo Park, CA"
+  bio              : "Hardware Engineer"
+  location         : "Sunnyvale, CA"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=w0vQtQIAAAAJ&hl=en"
